--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contact Us</title>
-    <link rel="stylesheet" href="..\vm-website\css\contact.css">
+    <link rel="stylesheet" href="..\css\contact.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="shortcut icon" type="image/png" href="..\vm-website\Images\logo black no bg.png" sizes="20x20">
+    <link rel="shortcut icon" type="image/png" href="..\Images\logo black no bg.png" sizes="20x20">
 </head>
 <body>
     <header>
@@ -93,7 +93,7 @@
                                 <p><b>For further queries, feel free to drop a message or call us on +919757095043</b></p>
                             </div>
                             <div class="center">
-                                <img src="..\vm-website\Images\logo black no bg.png" alt="logo" width="75px">
+                                <img src="..\Images\logo black no bg.png" alt="logo" width="75px">
                             </div>
                             <div class="row links">
                                 <div class="col s4 center face">
