--- a/events.html
+++ b/events.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="..\vm-website\css\events.css">
+    <link rel="stylesheet" href="..\css\events.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="shortcut icon" type="image/png" href="..\vm-website\Images\logo black no bg.png" sizes="20x20">
+    <link rel="shortcut icon" type="image/png" href="..\Images\logo black no bg.png" sizes="20x20">
     <title>Events</title>
 </head>
 <body>
@@ -17,7 +17,7 @@
               <div class="container">
                     <a href="index.html" class="brand-logo" id="brand">Verba Maximus</a>
                     <a href="#" class="sidenav-trigger" data-target="mobile-links">
-                        <img class="img1" src="..\vm-website\Images\hamburger.png" alt="menu">
+                        <img class="img1" src="..\Images\hamburger.png" alt="menu">
                     </a>
                     <ul class="right hide-on-med-and-down">
                         <li><a href="home.html">Home</a></li>
@@ -270,7 +270,7 @@
           </div>
           <div class="footer-copyright">
             <div class="container center">
-              <img src="..\vm-website\Images\logo white.png" alt="logo" class="logo">
+              <img src="..\Images\logo white.png" alt="logo" class="logo">
               <br>
               <e class="e">© 2020 Verba Maximus</e>
             </div>
