--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="..\vm-website\css\landing.css">
+    <link rel="stylesheet" href="..\css\landing.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="shortcut icon" type="image/png" href="..\vm-website\Images\logo black no bg.png" sizes="20x20">
+    <link rel="shortcut icon" type="image/png" href="..\Images\logo black no bg.png" sizes="20x20">
     <title>Verba Maximus</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
                       <div class="container">
                             <a href="index.html" class="brand-logo" id="brand">Verba Maximus</a>
                             <a href="#" class="sidenav-trigger" data-target="mobile-links">
-                                <img class="img1" src="..\vm-website\Images\hamburger.png" alt="menu">
+                                <img class="img1" src="..\Images\hamburger.png" alt="menu">
                             </a>
                             <ul class="right hide-on-med-and-down">
                                 <li><a href="home.html">Home</a></li>
