--- a/home.html
+++ b/home.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="..\vm-website\css\home.css">
+    <link rel="stylesheet" href="..\css\home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="shortcut icon" type="image/png" href="..\vm-website\Images\logo black no bg.png" sizes="20x20">
+    <link rel="shortcut icon" type="image/png" href="..\Images\logo black no bg.png" sizes="20x20">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Home</title>
  </head>
@@ -17,7 +17,7 @@
           <div class="container">
                 <a href="index.html" class="brand-logo" id="brand">Verba Maximus</a>
                 <a href="#" class="sidenav-trigger" data-target="mobile-links">
-                    <img class="img1" src="..\vm-website\Images\hamburger.png" alt="menu">
+                    <img class="img1" src="..\Images\hamburger.png" alt="menu">
                 </a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="home.html">Home</a></li>
@@ -61,18 +61,18 @@
               <div class="container center">
                   <div class="row">
                         <div class="col s6">
-                            <img src="..\vm-website\Images\abish.JPG" alt="abish" class="abish">
+                            <img src="..\Images\abish.JPG" alt="abish" class="abish">
                         </div>
                         <div class="col s6">
-                                <img src="..\vm-website\Images\meghna.JPG" alt="abish" class="abish">
+                                <img src="..\Images\meghna.JPG" alt="abish" class="abish">
                         </div>
                   </div>
                   <div class="row">
                         <div class="col s6">
-                            <img src="..\vm-website\Images\elasi.JPG" alt="abish" class="abish">
+                            <img src="..\Images\elasi.JPG" alt="abish" class="abish">
                         </div>
                         <div class="col s6">
-                                <img src="..\vm-website\Images\shukla.jpg" alt="abish" class="abish">
+                                <img src="..\Images\shukla.jpg" alt="abish" class="abish">
                         </div>
                   </div>
               </div>
@@ -82,16 +82,16 @@
                   <div class="headliners center"><h4><b>Headliners</b></h4></div>
                   <div class="text center">Swipe for more...</div>
                   <div class="carousel carousel-slider" id="carousel">
-                        <a class="carousel-item" href="#one!"><img src="..\vm-website\Images\sherlocked.png"></a>
-                        <a class="carousel-item" href="#two!"><img src="..\vm-website\Images\debate.png"></a>
-                        <a class="carousel-item" href="#three!"><img src="..\vm-website\Images\symphony.png"></a>
-                        <a class="carousel-item" href="#four!"><img src="..\vm-website\Images\slam.png"></a>
+                        <a class="carousel-item" href="#one!"><img src="..\Images\sherlocked.png"></a>
+                        <a class="carousel-item" href="#two!"><img src="..\Images\debate.png"></a>
+                        <a class="carousel-item" href="#three!"><img src="..\Images\symphony.png"></a>
+                        <a class="carousel-item" href="#four!"><img src="..\Images\slam.png"></a>
                       </div>
               </div>
           </section>
           <section class="vid">
             <h4 class="center afm"><b>VM'19 After Movie</b></h4>
-                <video class="responsive-video" src="..\vm-website\video\Afm.mp4" alt="video" width="100%" height="auto" controls></video>
+                <video class="responsive-video" src="..video\Afm.mp4" alt="video" width="100%" height="auto" controls></video>
           </section>
           <div class="fixed-action-btn">
             <a class="btn-floating btn-large red pulse">
@@ -126,7 +126,7 @@
             </div>
             <div class="footer-copyright">
               <div class="container center">
-                <img src="..\vm-website\Images\logo white.png" alt="logo" class="logo">
+                <img src="..\Images\logo white.png" alt="logo" class="logo">
                 <br>
               <e>© 2020 Verba Maximus</e>
               </div>
