--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="..\vm-website\css\landing.css">
+    <link rel="stylesheet" href="..\css\landing.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="shortcut icon" type="image/png" href="..\vm-website\Images\logo black no bg.png" sizes="20x20">
+    <link rel="shortcut icon" type="image/png" href="..\Images\logo black no bg.png" sizes="20x20">
     <title>Verba Maximus</title>
 </head>
 <body>
@@ -17,7 +17,7 @@
                             <a href="index.html" class="brand-logo" id="brand">
                                 Verba Maximus</a>
                             <a href="#" class="sidenav-trigger" data-target="mobile-links">
-                                <img class="img1" src="..\vm-website\Images\hamburger.PNG" alt="menu">
+                                <img class="img1" src="..\Images\hamburger.PNG" alt="menu">
                             </a>
                             <ul class="right hide-on-med-and-down">
                                 <li><a href="home.html">Home</a></li>
@@ -48,7 +48,7 @@
                   <main class="main center">
                         <div class="brand">
                                 <p class="Verba center"> 
-                                    <img src="..\vm-website\Images\logo white.png" alt="logo" width="80px" height="auto">
+                                    <img src="..\Images\logo white.png" alt="logo" width="80px" height="auto">
                                     Verba Maximus <b class="year">2020</b></p></p>
                                 <hr>
                                 <div class="countdown center">
