--- a/register.html
+++ b/register.html
@@ -6,9 +6,9 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../vm-website/css/register.css">
+        <link rel="stylesheet" href="../css/register.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-        <link rel="shortcut icon" type="image/png" href="..\vm-website\Images\logo black no bg.png" sizes="20x20">
+        <link rel="shortcut icon" type="image/png" href="..\Images\logo black no bg.png" sizes="20x20">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
@@ -20,7 +20,7 @@
                           <div class="container">
                                 <a href="index.html" class="brand-logo" id="brand">Verba Maximus</a>
                                 <a href="#" class="sidenav-trigger" data-target="mobile-links">
-                                    <img class="img1" src="..\vm-website\Images\hamburger.png" alt="menu">
+                                    <img class="img1" src="..\Images\hamburger.png" alt="menu">
                                 </a>
                                 <ul class="right hide-on-med-and-down">
                                     <li><a href="home.html">Home</a></li>
@@ -49,7 +49,7 @@
                     </p>
                     <br>
                     <div class="stumags">
-                        <img src="..\vm-website\Images\stumags.png" alt="stumags" width="300px" height="auto"> 
+                        <img src="..\Images\stumags.png" alt="stumags" width="300px" height="auto"> 
                     </div>
                     <div class="content2">
                         <h5> To register for events, stand up night etc. Click on the button below.</h5>
@@ -60,7 +60,7 @@
                         </button>
                     </a>
                     <div class="center">
-                        <img src="..\vm-website\Images\logo black no bg.png" alt="logo" width="75px">
+                        <img src="..\Images\logo black no bg.png" alt="logo" width="75px">
                     </div>
                     <div class="row links">
                         <div class="col s4 center face">
