--- a/team.html
+++ b/team.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="..\vm-website\css\team.css">
+    <link rel="stylesheet" href="..\css\team.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="shortcut icon" type="image/png" href="..\vm-website\Images\logo black no bg.png" sizes="20x20">
+    <link rel="shortcut icon" type="image/png" href="..\Images\logo black no bg.png" sizes="20x20">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Team</title>
 </head>
@@ -17,7 +17,7 @@
               <div class="container">
                     <a href="index.html" class="brand-logo" id="brand">Verba Maximus</a>
                     <a href="#" class="sidenav-trigger" data-target="mobile-links">
-                        <img class="img1" src="..\vm-website\Images\hamburger.png" alt="menu">
+                        <img class="img1" src="..\Images\hamburger.png" alt="menu">
                     </a>
                     <ul class="right hide-on-med-and-down">
                         <li><a href="home.html">Home</a></li>
@@ -54,7 +54,7 @@
                     <div class="col s12 m4">
                       <div class="card">
                         <div class="card-image">
-                          <img src="..\vm-website\Images\burk.JPG">
+                          <img src="..\Images\burk.JPG">
                           <a href="https://www.messenger.com/t/mohammed.burk.5" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">message</i></a>
                         </div>
                         <div class="card-content">
@@ -66,7 +66,7 @@
                     <div class="col s12 m4">
                         <div class="card">
                           <div class="card-image">
-                            <img src="..\vm-website\Images\maithree.JPG">
+                            <img src="..\Images\maithree.JPG">
                             <a href="https://www.messenger.com/t/maithree.venkatesan.3" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">message</i></a>
                           </div>
                           <div class="card-content">
@@ -78,7 +78,7 @@
                       <div class="col s12 m4">
                         <div class="card">
                           <div class="card-image">
-                            <img src="..\vm-website\Images\kaushik.JPG">
+                            <img src="..\Images\kaushik.JPG">
                             <a href="https://www.messenger.com/t/kaushik.sathishkumar" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">message</i></a>
                           </div>
                           <div class="card-content">
@@ -96,7 +96,7 @@
                 <div class="col s12 m4">
                     <div class="card">
                       <div class="card-image">
-                        <img src="..\vm-website\Images\parth.JPG">
+                        <img src="..\Images\parth.JPG">
                         <a href="https://www.messenger.com/t/parth.agarwal.946" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">message</i></a>
                       </div>
                       <div class="card-content">
@@ -108,7 +108,7 @@
                   <div class="col s12 m4">
                     <div class="card">
                       <div class="card-image">
-                        <img src="..\vm-website\Images\dope.JPG">
+                        <img src="..\Images\dope.JPG">
                         <a href="https://www.messenger.com/t/yatharth.bhalla.33" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">message</i></a>
                       </div>
                       <div class="card-content">
@@ -120,7 +120,7 @@
                   <div class="col s12 m4">
                     <div class="card">
                       <div class="card-image">
-                        <img src="..\vm-website\Images\nivedan.JPG">
+                        <img src="..\Images\nivedan.JPG">
                         <a href="https://www.messenger.com/t/nvishwanath1" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">message</i></a>
                       </div>
                       <div class="card-content">
@@ -134,7 +134,7 @@
                   <div class="col s12 m4">
                     <div class="card">
                       <div class="card-image">
-                        <img src="..\vm-website\Images\pranay.JPG">
+                        <img src="..\Images\pranay.JPG">
                         <a href="https://www.messenger.com/t/100007825967020" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">message</i></a>
                       </div>
                       <div class="card-content">
@@ -146,7 +146,7 @@
                   <div class="col s12 m4">
                     <div class="card">
                       <div class="card-image">
-                        <img src="..\vm-website\Images\archit.JPG">
+                        <img src="..\Images\archit.JPG">
                         <a href="https://www.messenger.com/t/archit.guglani.90" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">message</i></a>
                       </div>
                       <div class="card-content">
@@ -159,7 +159,7 @@
                   <div class="col s12 m4">
                     <div class="card">
                       <div class="card-image">
-                        <img src="..\vm-website\Images\guru.JPG">
+                        <img src="..\Images\guru.JPG">
                         <a href="https://www.messenger.com/t/guruvardhan1001" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">message</i></a>
                       </div>
                       <div class="card-content">
@@ -174,7 +174,7 @@
                     <div class="col s12 m4">
                         <div class="card">
                           <div class="card-image">
-                            <img src="..\vm-website\Images\shishir.JPG">
+                            <img src="..\Images\shishir.JPG">
                             <a href="https://www.messenger.com/t/mandapati.shishirvarma" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">message</i></a>
                           </div>
                           <div class="card-content">
@@ -186,7 +186,7 @@
                       <div class="col s12 m4">
                         <div class="card">
                           <div class="card-image">
-                            <img src="..\vm-website\Images\shreya.JPG">
+                            <img src="..\Images\shreya.JPG">
                             <a href="https://www.messenger.com/t/shreya.nilay" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">message</i></a>
                           </div>
                           <div class="card-content">
@@ -200,7 +200,7 @@
                       <div class="col s12 m4">
                         <div class="card">
                           <div class="card-image">
-                            <img src="..\vm-website\Images\rushabh.JPG">
+                            <img src="..\Images\rushabh.JPG">
                             <a href="https://www.messenger.com/t/rushabh.musthyala" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">message</i></a>
                           </div>
                           <div class="card-content">
@@ -217,7 +217,7 @@
                     <div class="col s12 m4">
                         <div class="card">
                           <div class="card-image">
-                            <img src="..\vm-website\Images\ashu.JPG">
+                            <img src="..\Images\ashu.JPG">
                             <a href="https://www.linkedin.com/in/ashutosh-patel-2930b9170/" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">message</i></a>
                           </div>
                           <div class="card-content">
@@ -229,7 +229,7 @@
                       <div class="col s12 m4">
                         <div class="card">
                           <div class="card-image">
-                            <img src="..\vm-website\Images\abhiraj.JPG">
+                            <img src="..\Images\abhiraj.JPG">
                             <a href="https://www.messenger.com/t/100017606114429" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">message</i></a>
                           </div>
                           <div class="card-content">
@@ -273,7 +273,7 @@
             </div>
             <div class="footer-copyright">
               <div class="container center">
-                <img src="..\vm-website\Images\logo white.png" alt="logo" class="logo">
+                <img src="..\Images\logo white.png" alt="logo" class="logo">
                 <br>
               <e>© 2020 Verba Maximus</e>
               </div>
