--- a/register.html
+++ b/register.html
@@ -6,7 +6,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../css/register.css">
+        <link rel="stylesheet" href="register.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
         <link rel="shortcut icon" type="image/png" href="..\Images\logo black no bg.png" sizes="20x20">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
