--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="landing.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="shortcut icon" type="image/png" href="..\Images\logo black no bg.png" sizes="20x20">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Verba Maximus</title>
 </head>
 <body>
@@ -17,7 +18,7 @@
                             <a href="index.html" class="brand-logo" id="brand">
                                 Verba Maximus</a>
                             <a href="#" class="sidenav-trigger" data-target="mobile-links">
-                                <img class="img1" src="..\Images\hamburger.PNG" alt="menu">
+                                <i class="material-icons">menu</i>
                             </a>
                             <ul class="right hide-on-med-and-down">
                                 <li><a href="home.html">Home</a></li>
