--- a/home.html
+++ b/home.html
@@ -91,7 +91,7 @@
           </section>
           <section class="vid">
             <h4 class="center afm"><b>VM'19 After Movie</b></h4>
-                <video class="responsive-video" src="..video\Afm.mp4" alt="video" width="100%" height="auto" controls></video>
+                <video class="responsive-video" src="..\video\Afm.mp4" alt="video" width="100%" height="auto" controls></video>
           </section>
           <div class="fixed-action-btn">
             <a class="btn-floating btn-large red pulse">
