--- a/events.html
+++ b/events.html
@@ -96,7 +96,7 @@
                     </span></div>
                   </li>
                   <li>
-                    <div class="collapsible-header">Slam Poetry</div>
+                    <div class="collapsible-header">VM Slam</div>
                     <div class="collapsible-body debate"><span>
                         <h4>VM Slam</h4>
                         <p class="content">
@@ -143,7 +143,7 @@
             </div>
             <ul class="collapsible">
             <li>
-                <div class="collapsible-header">Symphonies of the soul</div>
+                <div class="collapsible-header">Symphonies of the Soul</div>
                 <div class="collapsible-body sots"><span>
                     <h4>Symphonies of the Soul</h4>
                     <p class="content">
