--- a/register.html
+++ b/register.html
@@ -52,7 +52,7 @@
                         <img src="..\Images\stumags.png" alt="stumags" width="300px" height="auto"> 
                     </div>
                     <div class="content2">
-                        <h5> To register for events, stand up night etc. Click on the button below.</h5>
+                        <h5> To register for fest, workshops and the stand up night, click on the button below.</h5>
                     </div>
                     <a href="https://www.stumagz.com/in/vm2020/">
                         <button class="button1">
