--- a/home.html
+++ b/home.html
@@ -54,6 +54,42 @@
                   </p>
               </p>
           </section>
+          <section>
+            <div class="ttt container center">
+              <p class="workshop"><h3><b>Workshops</b></h3></p>
+            </div>
+            <div class="container">
+              <div class="row">
+                <div class="col s12 m3"></div>
+                <div class="col s12 m6">
+                  <div class="card">
+                    <div class="card-image waves-effect waves-block waves-light">
+                      <img class="activator" src="..\Images\ttt.PNG">
+                    </div>
+                    <div class="card-content">
+                      <span class="card-title activator grey-text text-darken-4"><b>TTT Workshop</b><i class="material-icons right">arrow_upward</i></span>
+                      <br>
+                      <div class="center">
+                        <a href="https://www.stumagz.com/vm2020/booking" class="cta">
+                          <button class="button1">
+                              Register
+                          </button>
+                  </a>
+                      </div>
+                    </div>
+                    <div class="card-reveal cont">
+                      <span class="card-title grey-text text-darken-4">TTT Workshop<i class="material-icons right">close</i></span>
+                      <p>We are proud to announce our first workshop for VM 2020
+                        <br>
+                        VM is collaborating with TTT official to conduct a flagship writing workshop on 19th Jan, from 10AM onwards.
+                        To register click on the registration link below.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
           <section class="about2">
               <div class="container center">
                   <div class="stills"><h3><b>Highlights from VM'19</b></h3></div>
