--- a/register.html
+++ b/register.html
@@ -54,7 +54,7 @@
                     <div class="content2">
                         <h5> To register for fest, workshops and the stand up night, click on the button below.</h5>
                     </div>
-                    <a href="https://www.stumagz.com/in/vm2020/">
+                    <a href="https://www.stumagz.com/vm2020/booking">
                         <button class="button1">
                             Register
                         </button>
