--- a/sponsors.html
+++ b/sponsors.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="..\vm-website\css\sponsors.css">
+    <link rel="stylesheet" href="sponsors.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="shortcut icon" type="image/png" href="..\vm-website\Images\logo black no bg.png" sizes="20x20">
+    <link rel="shortcut icon" type="image/png" href="..\Images\logo black no bg.png" sizes="20x20">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Sponsors</title>
 </head>
@@ -17,7 +17,7 @@
               <div class="container">
                     <a href="index.html" class="brand-logo" id="brand">Verba Maximus</a>
                     <a href="#" class="sidenav-trigger" data-target="mobile-links">
-                        <img class="img1" src="..\vm-website\Images\hamburger.png" alt="menu">
+                        <img class="img1" src="..\Images\hamburger.png" alt="menu">
                     </a>
                     <ul class="right hide-on-med-and-down">
                         <li><a href="home.html">Home</a></li>
@@ -52,54 +52,54 @@
               <div class="row fab">
               <div class="col s12 m4"></div>   
               <div class="col s12 m4">
-                  <img src="..\vm-website\Images\fablabs.png" alt="fablabs">
+                  <img src="..\Images\fablabs.png" alt="fablabs">
                   <h5 class="center fab">Merchandise Partner and TITLE for Devil's Advocate</h5>
               </div>
               </div>
               <div class="row fab"> 
                 <div class="col s12 m4"></div>  
                 <div class="col s12 m4">
-                    <img src="..\vm-website\Images\stumags.png" alt="fablabs" width="100%">
+                    <img src="..\Images\stumags.png" alt="fablabs" width="100%">
                     <h5 class="center fab">Exclusive online ticketing partner and TITLE for LIT Quiz</h5>
                 </div>
                 </div>
                 <div class="row">
                     <div class="col s12 m4">
-                        <img src="..\vm-website\Images\rorito.jpg" alt="fablabs" width="100%" height="250px">
+                        <img src="..\Images\rorito.jpg" alt="fablabs" width="100%" height="250px">
                         <h5 class="center fab">Stationery Partner</h5>
                     </div>
                     <div class="col s12 m4"></div>
                     <div class="col s12 m4">
-                        <img src="..\vm-website\Images\hell.png" alt="fablabs" width="100%" height="250px">
+                        <img src="..\Images\hell.png" alt="fablabs" width="100%" height="250px">
                         <h5 class="center fab">Energy Drink Partner</h5>
                     </div>
                 </div>
                 <div class="row fab">
                     <div class="col s12 m4"></div>   
                     <div class="col s12 m4">
-                        <img src="..\vm-website\Images\zomato.jpg" alt="fablabs" width="100%">
+                        <img src="..\Images\zomato.jpg" alt="fablabs" width="100%">
                         <h5 class="center fab">Food Delivery partner and TITLE of VM Slam</h5>
                     </div>
                     </div>
                 <div class="row">
                     <div class="col s12 m4">
-                        <img src="..\vm-website\Images\ims.png" alt="fablabs" width="100%" height="250px">
+                        <img src="..\Images\ims.png" alt="fablabs" width="100%" height="250px">
                         <h5 class="center fab">Eductaion Partner</h5>
                     </div>
                     <div class="col s12 m4"></div>
                     <div class="col s12 m4">
-                        <img src="..\vm-website\Images\novus.png" alt="fablabs" width="100%" height="250px">
+                        <img src="..\Images\novus.png" alt="fablabs" width="100%" height="250px">
                         <h5 class="center fab">Eductaion Partner</h5>
                     </div>
                 </div>
                 <div class="row fab">
                     <div class="col s12 m4">
-                        <img src="..\vm-website\Images\atkt.jpg" alt="fablabs" width="100%">
+                        <img src="..\Images\atkt.jpg" alt="fablabs" width="100%">
                         <h5 class="center fab">Food Delivery partner and TITLE of VM Slam</h5>
                     </div> 
                     <div class="col s12 m4"></div>   
                     <div class="col s12 m4">
-                        <img src="..\vm-website\Images\kaf.jpg" alt="fablabs" width="100%" height="225px">
+                        <img src="..\Images\kaf.jpg" alt="fablabs" width="100%" height="225px">
                         <h5 class="center fab">Food Delivery partner and TITLE of VM Slam</h5>
                     </div>
                     </div>
@@ -137,7 +137,7 @@
             </div>
             <div class="footer-copyright">
               <div class="container center">
-                <img src="..\vm-website\Images\logo white.png" alt="logo" class="logo">
+                <img src="..\Images\logo white.png" alt="logo" class="logo">
                 <br>
               <e>© 2020 Verba Maximus</e>
               </div>
