--- a/home.html
+++ b/home.html
@@ -56,22 +56,51 @@
           </section>
           <section>
             <div class="ttt container center">
-              <p class="workshop"><h3><b>Workshops</b></h3></p>
+              <p class="workshop"><h3><b>Major events of VM'20</b></h3></p>
             </div>
             <div class="container">
               <div class="row">
                 <div class="col s12 m3"></div>
                 <div class="col s12 m6">
+                <div class="card">
+                  <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="..\vm-website\Images\varun.PNG">
+                  </div>
+                  <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4"><b>Stand-up Night</b><i class="material-icons right">arrow_upward</i></span>
+                    <br>
+                    <div class="center">
+                      <a href="https://www.stumagz.com/vm2020/booking" class="cta">
+                        <button class="button1">
+                            Register
+                        </button>
+                </a>
+                    </div>
+                  </div>
+                  <div class="card-reveal cont">
+                    <span class="card-title grey-text text-darken-4">TTT Workshop<i class="material-icons right">close</i></span>
+                    <p>We are proud to announce our Stand-up event for VM 2020
+                      <br>
+                      VM is collaborating with Varun Thakur to organize a Stand-up night for the participants of VM'20.
+                      Let's get together and enjoy a night of fun and laughter. To register click below.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              </div>
+              <div class="row">
+                <div class="col s12 m3"></div>
+                <div class="col s12 m6">
                   <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
-                      <img class="activator" src="..\Images\ttt.png">
+                      <img class="activator" src="..\vm-website\Images\ttt.PNG">
                     </div>
                     <div class="card-content">
                       <span class="card-title activator grey-text text-darken-4"><b>TTT Workshop</b><i class="material-icons right">arrow_upward</i></span>
                       <br>
                       <div class="center">
                         <a href="https://www.stumagz.com/vm2020/booking" class="cta">
-                          <button class="button3">
+                          <button class="button1">
                               Register
                           </button>
                   </a>
