--- a/home.html
+++ b/home.html
@@ -64,7 +64,7 @@
                 <div class="col s12 m6">
                 <div class="card">
                   <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src="..\vm-website\Images\varun.PNG">
+                    <img class="activator" src="..\Images\varun.PNG">
                   </div>
                   <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4"><b>Stand-up Night</b><i class="material-icons right">arrow_upward</i></span>
@@ -93,7 +93,7 @@
                 <div class="col s12 m6">
                   <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
-                      <img class="activator" src="..\vm-website\Images\ttt.PNG">
+                      <img class="activator" src="..\Images\ttt.PNG">
                     </div>
                     <div class="card-content">
                       <span class="card-title activator grey-text text-darken-4"><b>TTT Workshop</b><i class="material-icons right">arrow_upward</i></span>
