--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
                         <li><a href="home.html">Home</a></li>
                         <li><a href="events.html">Events</a></li>
                         <li><a href="team.html">Team</a></li>
-                        <li><a href="#">Sponsors</a></li>
+                        <li><a href="sponsors.html">Sponsors</a></li>
                         <li><a href="contact.html">Contact</a></li>
                         <li><a href="schedule.html">Schedule</a></li>
                         <li><a href="register.html" class="cta">
@@ -39,7 +39,7 @@
                 <li><a href="home.html">Home</a></li>
                 <li><a href="events.html">Events</a></li>
                 <li><a href="team.html">Team</a></li>
-                <li><a href="#">Sponsors</a></li>
+                <li><a href="sponsors.html">Sponsors</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="schedule.html">Schedule</a></li>
                 <li><a href="register.html">Register</a></li>
