--- a/register.html
+++ b/register.html
@@ -26,7 +26,7 @@
                                     <li><a href="home.html">Home</a></li>
                                     <li><a href="events.html">Events</a></li>
                                     <li><a href="team.html">Team</a></li>
-                                    <li><a href="#">Sponsors</a></li>
+                                    <li><a href="sponsors.html">Sponsors</a></li>
                                     <li><a href="contact.html">Contact</a></li>
                                     <li><a href="schedule.html">Schedule</a></li>
                                 </ul>
@@ -37,6 +37,7 @@
                             <li><a href="home.html">Home</a></li>
                             <li><a href="events.html">Events</a></li>
                             <li><a href="team.html">Team</a></li>
+                            <li><a href="sponsors.html">Sponsors</a>
                             <li><a href="contact.html">Contact</a></li>
                             <li><a href="schedule.html">Schedule</a></li>
                       </ul>
