--- a/sponsors.html
+++ b/sponsors.html
@@ -65,7 +65,7 @@
                 </div>
                 <div class="row">
                     <div class="col s12 m4">
-                        <img src="..\Images\rorito.jpg" alt="fablabs" width="100%" height="250px">
+                        <img src="..\Images\rorito.JPG" alt="fablabs" width="100%" height="250px">
                         <h5 class="center fab">Stationery Partner</h5>
                     </div>
                     <div class="col s12 m4"></div>
@@ -77,7 +77,7 @@
                 <div class="row fab">
                     <div class="col s12 m4"></div>   
                     <div class="col s12 m4">
-                        <img src="..\Images\zomato.jpg" alt="fablabs" width="100%">
+                        <img src="..\Images\zomato.JPG" alt="fablabs" width="100%">
                         <h5 class="center fab">Food Delivery partner and TITLE of VM Slam</h5>
                     </div>
                     </div>
@@ -94,12 +94,12 @@
                 </div>
                 <div class="row fab">
                     <div class="col s12 m4">
-                        <img src="..\Images\atkt.jpg" alt="fablabs" width="100%">
+                        <img src="..\Images\atkt.JPG" alt="fablabs" width="100%">
                         <h5 class="center fab">Food Delivery partner and TITLE of VM Slam</h5>
                     </div> 
                     <div class="col s12 m4"></div>   
                     <div class="col s12 m4">
-                        <img src="..\Images\kaf.jpg" alt="fablabs" width="100%" height="225px">
+                        <img src="..\Images\kaf.JPG" alt="fablabs" width="100%" height="225px">
                         <h5 class="center fab">Food Delivery partner and TITLE of VM Slam</h5>
                     </div>
                     </div>
