--- a/home.html
+++ b/home.html
@@ -64,7 +64,7 @@
                 <div class="col s12 m6">
                 <div class="card">
                   <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src="..\Images\varun.PNG">
+                    <img class="activator" src="..\Images\varun.png">
                   </div>
                   <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4"><b>Stand-up Night</b><i class="material-icons right">arrow_upward</i></span>
@@ -78,7 +78,7 @@
                     </div>
                   </div>
                   <div class="card-reveal cont">
-                    <span class="card-title grey-text text-darken-4">TTT Workshop<i class="material-icons right">close</i></span>
+                    <span class="card-title grey-text text-darken-4">Stand up night<i class="material-icons right">close</i></span>
                     <p>We are proud to announce our Stand-up event for VM 2020
                       <br>
                       VM is collaborating with Varun Thakur to organize a Stand-up night for the participants of VM'20.
@@ -93,7 +93,7 @@
                 <div class="col s12 m6">
                   <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
-                      <img class="activator" src="..\Images\ttt.PNG">
+                      <img class="activator" src="..\Images\ttt.png">
                     </div>
                     <div class="card-content">
                       <span class="card-title activator grey-text text-darken-4"><b>TTT Workshop</b><i class="material-icons right">arrow_upward</i></span>
