--- a/sponsors.html
+++ b/sponsors.html
@@ -52,7 +52,7 @@
               <div class="row fab">
               <div class="col s12 m4"></div>   
               <div class="col s12 m4">
-                  <img src="..\Images\fablabs.png" alt="fablabs">
+                  <img src="..\Images\fablabs.png" alt="fablabs" width="100%">
                   <h5 class="center fab">Merchandise Partner and TITLE for Devil's Advocate</h5>
               </div>
               </div>
